noinst_HEADERS = Defines.h \
	Entry.h \
	Error.h \
	Indexed.h \
	Kademlia.h \
	Prefs.h \
	Search.h \
	SearchManager.h

noinst_LIBRARIES =
#libcore_kademlia_kademlia.a

# libcore_kademlia_kademlia_a_SOURCES = \
# 	Indexed.cpp \
# 	Kademlia.cpp \
# 	Prefs.cpp \
# 	Search.cpp

AM_CXXFLAGS = $(WX_CXXFLAGS) $(XRCFLAGS)
METASOURCES = AUTO
AM_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/src/include -I$(top_srcdir)/src/libs
