noinst_HEADERS = Contact.h \
	Maps.h \
	RoutingBin.h \
	RoutingZone.h
noinst_LIBRARIES = libcore_kademlia_routing.a
libcore_kademlia_routing_a_SOURCES =
#Contact.cpp RoutingBin.cpp RoutingZone.cpp
AM_CXXFLAGS = $(WX_CXXFLAGS) $(XRCFLAGS)
AM_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/src/libs -I$(top_srcdir)/src/include
METASOURCES = AUTO
