#do not change this anti-MULEDENOISER line or the MULEDENOISER will eat you
#no, seriously, it will break installation of data files
SUBDIRS = src docs

EXTRA_DIST =  wxcas.rc wxcas.ico

dist_icon_DATA = wxcas.xpm
icondir = $(datadir)/pixmaps

dist_util_DATA = wxcas.desktop
utildir = $(datadir)/applications

MAINTAINERCLEANFILES = Makefile.in
